# ColorFormula

./: .gitignore  build.gradle  settings.gradle  versions.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  StartUpOptimize.cpp  StartUpOptimize.h
app/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_normal_key_board.xml  activity_payment_key_board.xml  add_canned_finish_window.xml  blue_bond_item.xml  blue_find_item.xml  bluetooth_layout.xml  fragment_stand_formula.xml  fragment_tng_formula.xml  grid_item_virtual_keyboard.xml  layout_popup_bottom.xml  layout_virtual_keyboard.xml  left_adapter_item.xml  manual_operate.xml  manual_operation_item.xml  my_formula.xml  my_formula_item.xml  pop_dialog.xml  stand_formula_detail.xml  stand_formula_item.xml  standformula_edit.xml  tng_formula.xml  tng_formula_detail.xml  tng_formula_item.xml  work_state.xml
commnlib/: build.gradle
commnlib/src/main/: AndroidManifest.xml
commnlib/src/main/assets/: ColorResult.xml  MyFormula.json  MyFormula.xml  MyFormulas.xml
crash2/: build.gradle
crash2/src/main/: AndroidManifest.xml
crash2/src/main/cpp/: CMakeLists.txt  bugly.cpp
datacorrects/: build.gradle
datacorrects/src/main/: AndroidManifest.xml
form/: build.gradle
form/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
keytool/: keystore.jks
mypermission/: build.gradle
mypermission/src/main/: AndroidManifest.xml
netrequest/: build.gradle
netrequest/src/main/: AndroidManifest.xml
(+390 files in other folders)
